# Zork-Game

./: .gitignore  Build Release.sh  Build and Run.sh  CMakeLists.txt  README.md  vcpkg.json
Game_autogen/: moc_predefs.h
Game_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Release/: Game
src/: ECS.h  Game.cpp  Game.h  ZorkUL.cpp
src/app/: CMakeLists.txt  main.cpp  mainwindow.ui
src/controller/: Command.cpp  Command.h  CommandUtils.h  Enum.h  GameController.cpp  GameController.h
src/logic/: Character.h  ECS.cpp  ECS.h  Game.cpp
src/model/: Action.h  CMakeLists.txt  Character.cpp  Character.h  CliUtils.cpp  Command.cpp  Command.h  CommandUtils.cpp  CommandWords.cpp  CommandWords.h  Direction.h  Enum.h  Error.h  Game.cpp  Game.h  GameModel.cpp  GameModel.h  GameState.cpp  GameState.h  Parser.cpp  Parser.h  Room.cpp  Room.h  Utils.cpp  Utils.h  item.cpp  item.h  temp.txt
src/view/: Utils.h
src/view/cli/: GameCLI.cpp  GameCLI.h
src/view/gui/: GameGUI.cpp  GameGUI.h  GameWindow.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow.ui.autosave
